whitespace fix in right side

--- a/tyandetect.css
+++ b/tyandetect.css
@@ -1,5 +1,12 @@
-body {
+html,body
+{
+    width: 100%;
+    height: 100%;
     margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+body {
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -51,7 +58,7 @@ a#title {
 #result h2:after {
     content: '';
     position: absolute;
-    background-color: rgba(139, 244, 242, 0.71);
+    background-color: rgba(255, 169, 220, 0.71);
     width: 8rem;
     height: 8rem;
     right: calc( 50% - 4rem );
@@ -154,7 +161,6 @@ section.question input:checked + label { background-color: #bff1a1; }
 .control-prev:after { transform: translateY(-1.4rem) rotate(-45deg); }
 
 .progress {
-/*    font-size: 12px;*/
     width: calc(100% - 10em);
     height: 4px;
     margin: 5em;
@@ -190,12 +196,6 @@ section.question input:checked + label { background-color: #bff1a1; }
 @media only screen and (min-device-width : 300px) and (max-device-width : 700px) {
     html {
         font-size: 8px;
-    }
-    body {
-        padding: 0px;
-        margin: 0px;
-        max-width: 100%;
-        overflow-x: hidden;
     }
     .control-next:before { transform: translateY(1.8rem) rotate(-45deg); }
     .control-next:after { transform: translateY(-1.8rem) rotate(45deg); }
